@@ -1,11 +1,11 @@
 .\"     Title: aria2c
 .\"    Author: 
 .\" Generator: DocBook XSL Stylesheets v1.73.2 <http://docbook.sf.net/>
-.\"      Date: 12/29/2008
+.\"      Date: 01/16/2009
 .\"    Manual: 
 .\"    Source: 
 .\"
-.TH "ARIA2C" "1" "12/29/2008" "" ""
+.TH "ARIA2C" "1" "01/16/2009" "" ""
 .\" disable hyphenation
 .nh
 .\" disable justification (adjust text to left margin only)
@@ -193,10 +193,7 @@ Specifies timeout in seconds to invalidate performance profile of the servers si
 .PP
 \fB\-s\fR, \fB\-\-split\fR=N
 .RS 4
-Download a file using N connections\&. If more than N URLs are given, first N URLs are used and remaining URLs are used for backup\&. If less than N URLs are given, those URLs are used more than once so that N connections total are made simultaneously\&. N must be between
-\fI1\fR
-and
-\fI16\fR\&. Please see
+Download a file using N connections\&. If more than N URLs are given, first N URLs are used and remaining URLs are used for backup\&. If less than N URLs are given, those URLs are used more than once so that N connections total are made simultaneously\&. Please see
 \fB\-j\fR
 option too\&. Please note that in Metalink download, this option has no effect and use
 \fB\-C\fR
