@@ -622,7 +622,7 @@ aria2c -o myfile.zip http://mirror1/file.zip http://mirror2/file.zip</td>
   used for backup.
   If less than N URLs are given, those URLs are used more than once so that N
   connections total are made simultaneously.
-  N must be between <em>1</em> and <em>16</em>. Please see <strong>-j</strong> option too.
+  Please see <strong>-j</strong> option too.
   Please note that in Metalink download, this option has no effect and use
   <strong>-C</strong> option instead.
   Default: <em>5</em>
@@ -2064,7 +2064,7 @@ files in the program, then also delete it here.</p></div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2008-12-29 23:10:06 JST
+Last updated 2009-01-16 00:36:39 JST
 </div>
 </div>
 </body>
