@@ -146,7 +146,7 @@ aria2c -o myfile.zip \http://mirror1/file.zip \http://mirror2/file.zip
   used for backup.
   If less than N URLs are given, those URLs are used more than once so that N
   connections total are made simultaneously.
-  N must be between '1' and '16'. Please see *-j* option too.
+  Please see *-j* option too.
   Please note that in Metalink download, this option has no effect and use
   *-C* option instead.
   Default: '5'
